--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.3.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
