--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-multi-carousel": "^2.6.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-simple-image-slider": "^2.3.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
